adds ticket functionality to flights app

--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -26,11 +26,10 @@
           <td><%= flight.airport %></td>
           <td><%= flight.flightNo %></td>
           <td><%= flight.departs %></td>
+          <td><a href="/flights/<%= flight._id %>">DETAILS</a></td>
         </tr>
         <% }) %>
       <!-- Close the forEach using EJS here -->
     </tbody>
   </table>
   <%- include('../partials/footer') %>
-</body>
-</html>
