--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -1,22 +1,90 @@
-<% if (flight.destinations.length) { %>
-<table>
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Review</th>
-            <th>Rating</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% <flight.destinations.forEach(function(destination) { %>
-            <tr> 
-                <td><%= destination.createdAt.toLocalDateString() %></td>
-                <td><%= destination.airport %></td>
-                <td><%= destination.arrival %></td>
-            </tr>
-        })
-    </tbody>
-</table>
-}
+<%- include('../partials/header') %>
+    <section id="show-page">
+        <div> Airline: </div>
+        <div>
+            <%= flight.airline %>
+        </div>
+        <div> Airport: </div>
+        <div>
+            <%= flight.airport %>
+        </div>
+        <div> Flight Number: </div>
+        <div>
+            <%= flight.flightNo %>
+        </div>
+        <div> Flight Departure Time: </div>
+        <div>
+            <%= flight.departs %>
+        </div>
+    </section>
+    <a href="/flights/<%= flight._id %>/tickets/new">Add Ticket</a>
 
-<%- include('../partials/footer') %>
+    </form>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Seat Number</th>
+                <th>Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% tickets.forEach(function(ticket) { %>
+                <tr>
+                    <td>
+                        <%= ticket.seat %>
+                    </td>
+                    <td>
+                        <%= ticket.price %>
+                    </td>
+                </tr>
+        </tbody>
+    </table>
+    <% }) %>
+        <br><br>
+        <h2>Destinations</h2>
+        <form id="add-destination-form" Method="POST" action="/flights/<%= flight.id %>/destinations">
+
+            <label>Airport:</label>
+            <select name="airport">
+                <option value="AUS">AUS</option>
+                <option value="DFW">DFW</option>
+                <option value="DEN" selected>DEN</option>
+                <option value="LAX">LAX</option>
+                <option value="SAN">SAN</option>
+            </select><br>
+            <label>Arrival:</label>
+            <input name="arrival" type="date"><br>
+            <input name="submit" type="submit" value="Add Destination">
+        </form>
+        <% if(flight.destinations.length) { %>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Airport</th>
+                        <th>Arrival</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% flight.destinations.forEach(function(destination) { %>
+                        <tr>
+                            <td>
+                                <%= destination.createdAt.toLocaleDateString() %>
+                            </td>
+                            <td>
+                                <%= destination.airport %>
+                            </td>
+                            <td>
+                                <%= destination.arrival %>
+                            </td>
+                        </tr>
+                        <% }) %>
+                </tbody>
+                </form>
+
+
+            </table>
+            <% } %>
+
+                <%- include('../partials/footer') %>
